After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667904 - Introspection fixes for Vala bindings
Introspection fixes for Vala bindings
Status: RESOLVED FIXED
Product: libnotify
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: libnotify-maint
libnotify-maint
: 720449 (view as bug list)
Depends on:
Blocks: 635330
 
 
Reported: 2012-01-14 07:34 UTC by Evan Nemerson
Modified: 2014-04-01 19:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Include C header information and exported packages in GIR (889 bytes, patch)
2012-01-14 07:35 UTC, Evan Nemerson
accepted-commit_now Details | Review
Add some missing annotations (1.55 KB, patch)
2012-01-14 07:35 UTC, Evan Nemerson
accepted-commit_now Details | Review

Description Evan Nemerson 2012-01-14 07:34:44 UTC
A couple of small fixes are required to avoid any regressions when switching the Vala bindings to GIR: include C header and exported package information, and fix annotations for notify_notification_set_hint_byte_array and notify_notification_add_action.
Comment 1 Evan Nemerson 2012-01-14 07:35:02 UTC
Created attachment 205254 [details] [review]
Include C header information and exported packages in GIR
Comment 2 Evan Nemerson 2012-01-14 07:35:20 UTC
Created attachment 205255 [details] [review]
Add some missing annotations
Comment 3 André Klapper 2012-04-04 10:39:32 UTC
Mass-fixing incorrect Default Assignee and QA contact scheme for libnotify so interested people can follow its development. (See 606365#c1 for ref.)
Comment 4 Emmanuele Bassi (:ebassi) 2014-04-01 13:53:41 UTC
Review of attachment 205254 [details] [review]:

looks good.
Comment 5 Emmanuele Bassi (:ebassi) 2014-04-01 13:54:12 UTC
Review of attachment 205255 [details] [review]:

looks okay to me.
Comment 6 Emmanuele Bassi (:ebassi) 2014-04-01 13:57:04 UTC
Review of attachment 205255 [details] [review]:

the patch is not really up to date with the current HEAD. Giovanni fixed the add_action() annotations already.
Comment 7 Luca Bruno 2014-04-01 19:24:36 UTC
commit da49c8c599d085d79caa46c260366addf2e306f3
Author: Evan Nemerson <evan@coeus-group.com>
Date:   Fri Jan 13 23:27:23 2012 -0800

    NotifyNotification: fix set_hint_byte_array value annotation
    
    https://bugzilla.gnome.org/show_bug.cgi?id=667904

commit 5a486c549069cf712a2c15af64e77ea16e800b09
Author: Evan Nemerson <evan@coeus-group.com>
Date:   Fri Jan 13 23:12:44 2012 -0800

    Include C header information and exported packages in GIR
    
    https://bugzilla.gnome.org/show_bug.cgi?id=667904

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Comment 8 Luca Bruno 2014-04-01 19:25:10 UTC
*** Bug 720449 has been marked as a duplicate of this bug. ***