NotifyNotification: fix set_hint_byte_array value annotation

https://bugzilla.gnome.org/show_bug.cgi?id=667904